[package]
name = "sybil-l1-protocol"
version = "0.1.0"
edition = "2021"
description = "Ethereum L1 ABI, event parsing, and bridge hashing primitives for Sybil"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
