[package]
name = "sybil-l1-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Ethereum L1 ABI, event parsing, and bridge hashing primitives for Sybil"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde_json = { workspace = true }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
