[package]
name = "sybil-loadtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "sybil-history-load"
path = "src/bin/history_load.rs"

[[bin]]
name = "sybil-ws-load"
path = "src/bin/ws_load.rs"

[dependencies]
futures-util = "0.3"
goose = { version = "0.18.1", default-features = false, features = ["rustls-tls"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
sybil-client = { path = "../sybil-client" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
