[package]
name = "sybil-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Native Sybil market catalog, provisioning, and static-anchor liquidity"

[[bin]]
name = "sybil-native-admin"
path = "src/bin/admin.rs"

[[bin]]
name = "sybil-native-mm"
path = "src/bin/mm.rs"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
sybil-client = { path = "../sybil-client" }
sybil-market-maker = { path = "../sybil-market-maker" }
axum = { version = "0.8", features = ["json"] }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = "2"

[lints.clippy]
disallowed_types = "allow"
