[package]
name = "sybil-oracle"
version = "0.1.0"
edition = "2021"
description = "Pluggable oracle/resolution system for Sybil prediction markets"

[dependencies]
matching-engine = { path = "../matching-engine" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
