[package]
name = "sybil-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pluggable oracle/resolution system for Sybil prediction markets"

[dependencies]
matching-engine = { path = "../matching-engine" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
