[package]
name = "sybil-polymarket"
version = "0.1.0"
edition = "2021"
description = "Mirror Polymarket markets onto a Sybil instance with reference-price market making"

[[bin]]
name = "sybil-polymarket"
path = "src/main.rs"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
sybil-canonical = { path = "../sybil-canonical" }
sybil-client = { path = "../sybil-client" }
p256 = { version = "0.14.0-rc.7", features = ["ecdsa"] }
hex = "0.4"
getrandom = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
