[package]
name = "sybil-polymarket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mirror Polymarket markets onto a Sybil instance with reference-price market making"

[[bin]]
name = "sybil-polymarket"
path = "src/main.rs"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
sybil-signing = { path = "../sybil-signing" }
sybil-client = { path = "../sybil-client" }
p256 = { workspace = true, features = ["ecdsa"] }
hex = { workspace = true }
getrandom = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query", "rustls"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = "2"
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
