[package]
name = "sybil-proof-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Portable Sybil proof jobs, epoch identifiers, and proof envelopes"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sybil-verifier = { path = "../sybil-verifier", default-features = false }
sybil-zk = { path = "../sybil-zk" }
thiserror = { workspace = true }

[lints.clippy]
disallowed_types = "allow"
