[package]
name = "sybil-prover"
version = "0.1.0"
edition = "2021"
description = "Host-side Sybil proof job tooling"
default-run = "sybil-prover"

[features]
default = []
sequencer-store = ["dep:matching-engine", "dep:matching-sequencer", "dep:sybil-oracle"]
mock-live = ["dep:reqwest", "dep:sybil-api-types"]

[[bin]]
name = "sybil-prover"
path = "src/main.rs"

[[bin]]
name = "sybil-prover-mock"
path = "src/bin/sybil_prover_mock.rs"
required-features = ["mock-live"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
matching-engine = { path = "../matching-engine", optional = true }
matching-sequencer = { path = "../matching-sequencer", optional = true }
rmp-serde = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
sybil-api-types = { path = "../sybil-api-types", optional = true }
sybil-oracle = { path = "../sybil-oracle", optional = true }
sybil-verifier = { path = "../sybil-verifier" }
sybil-zk = { path = "../sybil-zk" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
